@@ -48,6 +48,9 @@ version 2.0.0:
 	  authorization.
 	* Conversation buffer scrollback limited to avoid large memory
 	  usage in active conversations.
+	* Added support for sending (with the /nudge command) and reciving MSN
+	  "nudges" (Julien Cegarra, Martin Bayard)
+	* Added an account action to open your Hotmail inbox from MSN
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
